<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
<TableLayout android:layout_width="fill_parent"
    android:stretchColumns="*" android:layout_height="fill_parent" android:background="#FF2B3B44">
    <TableRow>
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnPower" android:hapticFeedbackEnabled="true" android:tag="@string/remote_power" android:src="@drawable/power" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnHome" android:hapticFeedbackEnabled="true" android:tag="@string/remote_home" android:layout_column="2" android:src="@drawable/home" android:background="#00000000"></ImageButton>
</TableRow>
    <TableRow>
    	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Power" android:gravity="center" android:textSize="12sp" android:textColor="@color/remote_label_color"></TextView>
    	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:layout_column="2" android:text="Home" android:textColor="@color/remote_label_color"></TextView>
    </TableRow>
    
    <TableRow android:layout_marginBottom="10sp">    
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnUp" android:hapticFeedbackEnabled="true" android:tag="@string/remote_up" android:layout_column="1" android:src="@drawable/up" android:background="#00000000"></ImageButton>	
	</TableRow>
    
    <TableRow>
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnLeft" android:hapticFeedbackEnabled="true" android:tag="@string/remote_left" android:src="@drawable/left" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnEnter" android:hapticFeedbackEnabled="true" android:tag="@string/remote_enter" android:src="@drawable/enter" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnRight" android:hapticFeedbackEnabled="true" android:tag="@string/remote_right" android:src="@drawable/right" android:background="#00000000"></ImageButton>
</TableRow>
    
    <TableRow android:layout_marginTop="10sp">
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnDown" android:hapticFeedbackEnabled="true" android:tag="@string/remote_down" android:layout_column="1" android:src="@drawable/down" android:background="#00000000"></ImageButton>
</TableRow>
    
    <TableRow android:layout_marginTop="10sp">
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnBack" android:hapticFeedbackEnabled="true" android:tag="@string/remote_back" android:src="@drawable/back" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnStop" android:hapticFeedbackEnabled="true" android:tag="@string/remote_stop" android:src="@drawable/stop" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnOption" android:hapticFeedbackEnabled="true" android:tag="@string/remote_option" android:src="@drawable/options" android:background="#00000000"></ImageButton>
</TableRow>

<TableRow>
	<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Back" android:textColor="@color/remote_label_color"></TextView>
	<TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Stop" android:textColor="@color/remote_label_color"></TextView>
	<TextView android:id="@+id/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Option" android:textColor="@color/remote_label_color"></TextView>
</TableRow>
    
    <TableRow android:layout_marginTop="10sp">
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnRewind" android:hapticFeedbackEnabled="true" android:tag="@string/remote_rewind" android:src="@drawable/rewind" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnPausePlay" android:hapticFeedbackEnabled="true" android:tag="@string/remote_play_pause" android:src="@drawable/pause_play" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnForward" android:hapticFeedbackEnabled="true" android:tag="@string/remote_forward" android:src="@drawable/forward" android:background="#00000000"></ImageButton>
</TableRow>
  <TableRow>
	<TextView android:id="@+id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Rev" android:textColor="@color/remote_label_color"></TextView>
	<TextView android:id="@+id/TextView07" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Pause/Play" android:textColor="@color/remote_label_color"></TextView>
	<TextView android:id="@+id/TextView08" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="FF" android:textColor="@color/remote_label_color"></TextView>
</TableRow>
<TableRow android:layout_marginTop="10sp">
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnPrev" android:hapticFeedbackEnabled="true" android:tag="@string/remote_prev" android:src="@drawable/prev" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnNext" android:hapticFeedbackEnabled="true" android:tag="@string/remote_next" android:layout_column="2" android:src="@drawable/next" android:background="#00000000"></ImageButton>
</TableRow>
  <TableRow>
	<TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Prev" android:textColor="@color/remote_label_color"></TextView>
	<TextView android:id="@+id/TextView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Next" android:layout_column="2" android:textColor="@color/remote_label_color"></TextView>
</TableRow>
    <TableRow android:layout_marginTop="10sp">
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnSearch" android:hapticFeedbackEnabled="true" android:tag="@string/remote_search" android:src="@drawable/search" android:background="#00000000"></ImageButton>
<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnEject" android:hapticFeedbackEnabled="true" android:tag="@string/remote_eject" android:layout_column="2" android:src="@drawable/eject" android:background="#00000000"></ImageButton>
</TableRow>
  <TableRow>
	<TextView android:id="@+id/TextView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Search" android:textColor="@color/remote_label_color"></TextView>
	<TextView android:id="@+id/TextView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:textSize="12sp" android:text="Eject" android:layout_column="2" android:textColor="@color/remote_label_color"></TextView>
</TableRow>
</TableLayout>
</ScrollView>